[package]
name = "btm"
version = "0.14.1"
edition = "2021"
keywords = ["vcs", "snapshot", "zfs", "btrfs"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "Blockchain Time Machine"
homepage = "https://github.com/rust-util-collections/btm"
repository = "https://github.com/rust-util-collections/btm"

[dependencies]
ruc = { version = "5.0.12", features = ["cmd","uau"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = "0.26.2"

clap = { version = "4.3", features = ["cargo","derive"], optional = true }

[[bin]]
name = "btm"
path = "src/bins/btm.rs"

[features]
default = ["bin"]
bin = ["clap"]
