[package]
name = "btm"
version = "0.15.0"
edition = "2021"
keywords = ["vcs", "snapshot", "zfs", "btrfs"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "Blockchain Time Machine"
homepage = "https://github.com/rust-util-collections/btm"
repository = "https://github.com/rust-util-collections/btm"

[dependencies]
ruc = { version = "6.0", features = ["cmd","uau"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["fs"] }

clap = { version = "4.5", features = ["cargo","derive"], optional = true }

[[bin]]
name = "btm"
path = "src/bins/btm.rs"

[features]
default = ["bin"]
bin = ["clap"]
